Modified code to ensure JDK11 compatibility.Also added logout button on admin panels.